[package]
name = "audioping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "*" }
clap = { version = "*" }
cpal = { version = "*" }
ctrlc = { version = "*", features = ["termination"] }